RESOLVED FIXED235168
REGRESSION (r287574): ASSERTION FAILED: !m_impl || !m_shouldEnableAssertions || m_impl->wasConstructedOnMainThread() == isMainThread() under WebCore::AVTrackPrivateAVFObjCImpl::initializeAssetTrack()
https://bugs.webkit.org/show_bug.cgi?id=235168
Summary REGRESSION (r287574): ASSERTION FAILED: !m_impl || !m_shouldEnableAssertions ...
Ryan Haddad
Reported 2022-01-12 17:21:11 PST
The following API tests are asserting on iOS Debug bots: TestWebKitAPI.WebKitLegacy.AudioSessionCategoryIOS TestWebKitAPI.WebKitLegacy.PreemptVideoFullscreen TestWebKitAPI.WebKitLegacy.ScrollingDoesNotPauseMedia ASSERTION FAILED: !m_impl || !m_shouldEnableAssertions || m_impl->wasConstructedOnMainThread() == isMainThread() /Volumes/Data/worker/ios-simulator-15-debug/build/WebKitBuild/Debug-iphonesimulator/usr/local/include/wtf/WeakPtr.h(148) : T *WTF::WeakPtr<WebCore::AVTrackPrivateAVFObjCImpl>::operator->() const 1 0x117b9ef99 WTFCrash 2 0x16712b27b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x1671c554a WTF::WeakPtr<WebCore::AVTrackPrivateAVFObjCImpl, WTF::EmptyCounter>::operator->() const 4 0x1671c53bf WebCore::AVTrackPrivateAVFObjCImpl::initializeAssetTrack()::$_0::operator()()::'lambda'()::operator()() const 5 0x1671c52f9 WTF::Detail::CallableWrapper<WebCore::AVTrackPrivateAVFObjCImpl::initializeAssetTrack()::$_0::operator()()::'lambda'(), void>::call() 6 0x117bcc3a2 WTF::Function<void ()>::operator()() const 7 0x117c5e27e WTF::RunLoop::performWork() 8 0x117c62aae WTF::RunLoop::performWork(void*) 9 0x10da57e25 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ 10 0x10da57d1d __CFRunLoopDoSource0 11 0x10da571f2 __CFRunLoopDoSources0 12 0x10da51951 __CFRunLoopRun 13 0x10da51103 CFRunLoopRunSpecific 14 0x10e6cc41c -[NSRunLoop(NSRunLoop) runMode:beforeDate:] 15 0x106f2fc53 TestWebKitAPI::Util::run(bool*) 16 0x10635ce03 TestWebKitAPI::WebKitLegacy_AudioSessionCategoryIOS_Test::TestBody() 17 0x106fa80fb void testing::internal::HandleSehExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 18 0x106f7f95a void testing::internal::HandleExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 19 0x106f7f8a3 testing::Test::Run() 20 0x106f80931 testing::TestInfo::Run() 21 0x106f819b4 testing::TestSuite::Run() 22 0x106f9052f testing::internal::UnitTestImpl::RunAllTests() 23 0x106fac40b bool testing::internal::HandleSehExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) 24 0x106f8ff0a bool testing::internal::HandleExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) 25 0x106f8fdeb testing::UnitTest::Run() 26 0x10674cf11 RUN_ALL_TESTS() 27 0x10674cea6 TestWebKitAPI::TestsController::run(int, char**) 28 0x106f53cfb main 29 0x109542e1e https://results.webkit.org/?suite=api-tests&suite=api-tests&suite=api-tests&test=TestWebKitAPI.WebKitLegacy.AudioSessionCategoryIOS&test=TestWebKitAPI.WebKitLegacy.PreemptVideoFullscreen&test=TestWebKitAPI.WebKitLegacy.ScrollingDoesNotPauseMedia Test history suggests this regressed with https://trac.webkit.org/changeset/287574/webkit
Attachments
Patch (2.01 KB, patch)
2022-02-22 17:17 PST, Jer Noble
no flags
Radar WebKit Bug Importer
Comment 1 2022-01-12 17:21:22 PST
Jer Noble
Comment 2 2022-02-22 17:17:30 PST
Alexey Proskuryakov
Comment 3 2022-02-22 19:09:33 PST
Comment on attachment 452923 [details] Patch r=ews Are there any tests to unskip?
EWS
Comment 4 2022-02-23 07:56:03 PST
Committed r290372 (247688@main): <https://commits.webkit.org/247688@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 452923 [details].
Ryan Haddad
Comment 5 2022-02-23 09:26:21 PST
(In reply to Alexey Proskuryakov from comment #3) > Comment on attachment 452923 [details] > Patch > > r=ews > > Are there any tests to unskip? No, thanks for checking.
Note You need to log in before you can comment on or make changes to this bug.