REGRESSION (r287574): ASSERTION FAILED: !m_impl || !m_shouldEnableAssertions || m_impl->wasConstructedOnMainThread() == isMainThread() under WebCore::AVTrackPrivateAVFObjCImpl::initializeAssetTrack() https://bugs.webkit.org/show_bug.cgi?id=235168 <rdar://problem/87518939>

Reviewed by Alexey Proskuryakov.

Use runOnMainThread() from within WebCore, as it will dispatch to the correct thread when
running under iOS/WebKitLegacy.

* platform/graphics/avfoundation/AVTrackPrivateAVFObjCImpl.mm:
(WebCore::AVTrackPrivateAVFObjCImpl::initializeAssetTrack):



Canonical link: https://commits.webkit.org/247688@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290372 268f45cc-cd09-0410-ab3c-d52691b4dbfc